# normalDistributionPPTX

./: CMakeLists.txt  README.md  main.cpp
templates/: [Content_Types].xml
templates/docProps/: app.xml  core.xml
templates/ppt/: presentation.xml  viewProps.xml
templates/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
templates/ppt/slideMasters/: slideMaster1.xml
templates/ppt/theme/: theme1.xml
